fix: Update footer copyright year and add technology attribution

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 QA Engineer Portfolio. Built with Vite.</p>
+      <p>&copy; 2025 QA Engineer Portfolio. Built with Vite & Antigravity AI.</p>
     </footer>
   </div>
   <script type="module" src="/src/main.js"></script>
