feat: Add new projects and certifications to portfolio, update footer details

--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
               <span class="skill-tag">GitHub</span>
               <span class="skill-tag">Mochawesome</span>
               <span class="skill-tag">Allure Report</span>
+              <span class="skill-tag">Gitlab</span>
+              <span class="skill-tag">VsCode</span>
+              <span class="skill-tag">Antigra</span>
             </div>
           </div>
 
@@ -286,6 +289,24 @@
             <a href="https://api.badgr.io/public/assertions/g-csFPRtSLmN4gVhWEbuRA" target="_blank"
               class="btn secondary cert-btn">View Certificate</a>
           </div>
+
+          <div class="cert-card glass-card">
+            <div class="cert-icon">🛢️</div>
+            <h3 class="cert-title">Learned SQL fundamentals, ERD and normalization, practiced CRUD operations, joins, and transaction management for relational databases.</h3>
+            <p class="cert-issuer">Udemy | 2025</p>
+            <p class="cert-desc">Learned SQL fundamentals, ERD and normalization, practiced CRUD operations, joins, and transaction management for relational databases..</p>
+            <a href="https://www.udemy.com/certificate/UC-6d4d04ac-2cff-437f-94d1-6a4c7aa38e1e/" target="_blank"
+              class="btn secondary cert-btn">View Certificate</a>
+          </div>
+
+          <div class="cert-card glass-card">
+            <div class="cert-icon">🇨🇾</div>
+            <h3 class="cert-title">Cypress -Modern Automation Testing from Scratch + Frameworks.</h3>
+            <p class="cert-issuer">Udemy | 2025</p>
+            <p class="cert-desc">Built end-to-end web automation using Cypress with POM, fixtures, assertions, API mocking, BDD (Cucumber), and CI/CD integration via Jenkins.</p>
+            <a href="https://www.udemy.com/certificate/UC-6d4d04ac-2cff-437f-94d1-6a4c7aa38e1e/" target="_blank"
+              class="btn secondary cert-btn">View Certificate</a>
+          </div>
         </div>
       </section>
 
@@ -303,7 +324,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2025 QA Engineer Portfolio. Built with Vite & Antigravity AI.</p>
+      <p>&copy; 2025  Albarokah Rifansah Sutanto Putra. QA Engineer Portfolio. All rights reserved. Built with Vite & Antigravity AI.</p>
     </footer>
   </div>
   <script type="module" src="/src/main.js"></script>
