fix: Correct spelling of "Antigravity AI" in skills section

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <span class="skill-tag">Allure Report</span>
               <span class="skill-tag">Gitlab</span>
               <span class="skill-tag">VsCode</span>
-              <span class="skill-tag">Antigra</span>
+              <span class="skill-tag">Antigravity AI</span>
             </div>
           </div>
 
