feat: add profile picture and verify with cypress test TC-070a

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <a href="https://github.com/Albarokah9" target="_blank" class="btn secondary">GitHub</a>
           </div>
         </div>
+        <div class="hero-image">
+          <img src="/images/profile.jpg" alt="Albarokah Rifansah Sutanto Putra" loading="lazy" />
+        </div>
       </section>
 
       <section id="about" class="section">
