feat: add cover letter download button and file

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <span>📱 <a href="https://wa.me/6289611515526" target="_blank">+6289611515526</a></span>
           </div>
           <div class="social-links-hero">
+            <a href="files/Cover_Letter_Albarokah.pdf" target="_blank" class="btn secondary">Cover Letter</a>
             <a href="https://www.linkedin.com/in/albarokahrifansahsutantoputra" target="_blank"
               class="btn secondary">LinkedIn</a>
             <a href="https://github.com/Albarokah9" target="_blank" class="btn secondary">GitHub</a>
@@ -295,9 +296,11 @@
 
           <div class="cert-card glass-card">
             <div class="cert-icon">🛢️</div>
-            <h3 class="cert-title">Learned SQL fundamentals, ERD and normalization, practiced CRUD operations, joins, and transaction management for relational databases.</h3>
+            <h3 class="cert-title">Learned SQL fundamentals, ERD and normalization, practiced CRUD operations, joins,
+              and transaction management for relational databases.</h3>
             <p class="cert-issuer">Udemy | 2025</p>
-            <p class="cert-desc">Learned SQL fundamentals, ERD and normalization, practiced CRUD operations, joins, and transaction management for relational databases..</p>
+            <p class="cert-desc">Learned SQL fundamentals, ERD and normalization, practiced CRUD operations, joins, and
+              transaction management for relational databases..</p>
             <a href="https://www.udemy.com/certificate/UC-6d4d04ac-2cff-437f-94d1-6a4c7aa38e1e/" target="_blank"
               class="btn secondary cert-btn">View Certificate</a>
           </div>
@@ -306,7 +309,8 @@
             <div class="cert-icon">🇨🇾</div>
             <h3 class="cert-title">Cypress -Modern Automation Testing from Scratch + Frameworks.</h3>
             <p class="cert-issuer">Udemy | 2025</p>
-            <p class="cert-desc">Built end-to-end web automation using Cypress with POM, fixtures, assertions, API mocking, BDD (Cucumber), and CI/CD integration via Jenkins.</p>
+            <p class="cert-desc">Built end-to-end web automation using Cypress with POM, fixtures, assertions, API
+              mocking, BDD (Cucumber), and CI/CD integration via Jenkins.</p>
             <a href="https://www.udemy.com/certificate/UC-6d4d04ac-2cff-437f-94d1-6a4c7aa38e1e/" target="_blank"
               class="btn secondary cert-btn">View Certificate</a>
           </div>
@@ -327,7 +331,8 @@
     </main>
 
     <footer>
-      <p>&copy; 2025  Albarokah Rifansah Sutanto Putra. QA Engineer Portfolio. All rights reserved. Built with Vite & Antigravity AI.</p>
+      <p>&copy; 2025 Albarokah Rifansah Sutanto Putra. QA Engineer Portfolio. All rights reserved. Built with Vite &
+        Antigravity AI.</p>
     </footer>
   </div>
   <script type="module" src="/src/main.js"></script>
