feat: update experience metrics, add automation testing skill, and refine toolset.

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                 <ul class="exp-responsibilities">
                   <li>Performed manual and exploratory testing using the Black Box approach.</li>
                   <li>Conducted Smoke Testing on new builds for core features.</li>
-                  <li>Designed and executed 150+ functional test cases using Qase.io.</li>
-                  <li>Tracked 20+ critical bugs in ClickUp with detailed reproduction steps.</li>
+                  <li>Designed and executed 1.000+ functional test cases using ClickUp.</li>
+                  <li>Found and documented 42+ bugs in ClickUp with detailed reproduction steps and severity/priority classification.</li>
                   <li>Validated UI/UX elements ensuring consistent results.</li>
                 </ul>
               </div>
@@ -170,7 +170,7 @@
                 <div class="exp-header">
                   <div>
                     <h3 class="exp-title">Fiber Optic Technician</h3>
-                    <p class="exp-company">PT Supra Primatama Nusantara (Biznet)</p>
+                    <p class="exp-company">PT Supra Primatama Nusantara (Biznet) - Bali</p>
                   </div>
                   <span class="exp-date">March 2023 – June 2024</span>
                 </div>
@@ -254,6 +254,7 @@
                 <h3>Core Testing</h3>
                 <div class="skill-tags">
                   <span class="skill-tag">Manual Testing</span>
+                  <span class="skill-tag">Automation Testing</span>
                   <span class="skill-tag">Functional</span>
                   <span class="skill-tag">Exploratory</span>
                   <span class="skill-tag">Regression</span>
@@ -268,8 +269,6 @@
                 <div class="skill-tags">
                   <span class="skill-tag">Cypress</span>
                   <span class="skill-tag">Katalon</span>
-                  <span class="skill-tag">Selenium</span>
-                  <span class="skill-tag">Appium</span>
                   <span class="skill-tag">Cucumber</span>
                   <span class="skill-tag">Postman</span>
                 </div>
@@ -283,8 +282,11 @@
                   <span class="skill-tag">Groovy</span>
                   <span class="skill-tag">SQL</span>
                   <span class="skill-tag">Git/GitHub</span>
-                  <span class="skill-tag">Jira/ClickUp</span>
+                  <span class="skill-tag">Gitlab</span>
+                  <span class="skill-tag">ClickUp</span>
                   <span class="skill-tag">JMeter</span>
+                  <span class="skill-tag">Visual Studio Code</span>
+                  <span class="skill-tag">Antigravity</span>
                 </div>
               </div>
 
