fix: correct user's full name on profile.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <div class="user-card">
                 <img src="/images/profile.jpg" alt="Profile" class="user-avatar">
                 <div class="user-info">
-                  <h1 class="user-name">Albarokah Rifansah S.P.</h1>
+                  <h1 class="user-name">Albarokah Rifansah Sutanto Putra</h1>
                   <h2 class="user-role">QA Automation Engineer</h2>
                   <p class="user-status">🎯 Bug Hunter & Automation Enthusiast</p>
                 </div>
