chore: standardize CV asset name, update docs, and add detailed LinkedIn drafts

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
 
             <div class="term-row output fade-in-5 contact-row">
-              <a href="files/Cover_Letter_Albarokah.pdf" target="_blank" class="term-link">📄 Download CV</a>
+              <a href="files/Cover_Letter.pdf" target="_blank" class="term-link">📄 Download CV</a>
               <a href="https://www.linkedin.com/in/albarokahrifansahsutantoputra" target="_blank" class="term-link">👔
                 LinkedIn</a>
               <a href="https://wa.me/6289611515526" target="_blank" class="term-link">💬 WhatsApp</a>
