refactor: optimize project structure, consolidate terminal CSS, and improve responsiveness

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
       <section id="about" class="section">
         <h2 class="section-title">Professional Summary</h2>
-        <div class="terminal-container reveal" style="max-width: 900px; margin: 0 auto;">
+        <div class="terminal-container reveal term-container-summary">
           <div class="terminal-header">
             <div class="term-buttons">
               <span class="term-btn red"></span>
@@ -118,8 +118,7 @@
               <span class="prompt">➜</span> <span class="cmd">cat summary.md</span>
             </div>
             <div class="term-row output">
-              <div class="term-text-content"
-                style="font-family: 'Fira Code', monospace; line-height: 1.8; font-size: 1rem;">
+              <div class="term-text-content term-text-content-summary">
                 <p style="margin-bottom: 20px;">
                   Quality Assurance Engineer with hands-on experience in <span class="syntax-type">Manual Testing,
                     Automation Testing, and Performance Testing</span> for web and mobile applications. Currently
@@ -150,7 +149,7 @@
       <section id="experience" class="section">
         <h2 class="section-title">Professional Experience</h2>
 
-        <div class="terminal-container reveal" style="max-width: 900px; margin: 0 auto;">
+        <div class="terminal-container reveal term-container-experience">
           <div class="terminal-header">
             <div class="term-buttons">
               <span class="term-btn red"></span>
@@ -242,7 +241,7 @@
 
       <section id="education" class="section">
         <h2 class="section-title">Education</h2>
-        <div class="terminal-container reveal" style="max-width: 800px; margin: 0 auto;">
+        <div class="terminal-container reveal term-container-education">
           <div class="terminal-header">
             <div class="term-buttons">
               <span class="term-btn red"></span>
@@ -286,7 +285,7 @@
       <section id="skills" class="section">
         <h2 class="section-title">Skills & Expertise</h2>
 
-        <div class="terminal-container reveal" style="max-width: 1000px; margin: 0 auto;">
+        <div class="terminal-container reveal term-container-skills">
           <div class="terminal-header">
             <div class="term-buttons">
               <span class="term-btn red"></span>
@@ -555,7 +554,7 @@
 
       <section id="contact" class="section">
         <h2 class="section-title">Get In Touch</h2>
-        <div class="terminal-container reveal" style="max-width: 800px; margin: 0 auto;">
+        <div class="terminal-container reveal term-container-contact">
           <div class="terminal-header">
             <div class="term-buttons">
               <span class="term-btn red"></span>
