--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
                 <div>└── <span class="syntax-keyword">2022_Network_Engineering</span></div>
                 <div>&nbsp;&nbsp;&nbsp; └── <span class="syntax-string">SMK_Geo_Informatika.cpp</span> <span
-                    class="syntax-comment">// Network Infrastructure & Troubleshooting</span></div>
+                    class="syntax-comment">// Computer Network Engineering</span></div>
               </div>
 
               <div style="margin-top: 20px; font-family: 'Fira Code', monospace;">
